HETreeNode update continued.

--- a/HELLION.DataStructures/HELLION.DataStructures.csproj
+++ b/HELLION.DataStructures/HELLION.DataStructures.csproj
@@ -76,6 +76,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseClasses\HEBaseJsonFile.cs" />
     <Compile Include="Blueprints\HEBlueprint.cs" />
     <Compile Include="Blueprints\HEBlueprintCollectionTreeNode.cs" />
     <Compile Include="Blueprints\HEBlueprintDataViewTreeNode.cs" />
@@ -92,7 +93,6 @@
     <Compile Include="Blueprints\HEBlueprintCollection.cs" />
     <Compile Include="Blueprints\HEBlueprintStructureDefinitionsFile.cs" />
     <Compile Include="Blueprints\HEJsonBlueprintFile.cs" />
-    <Compile Include="BaseClasses\HEJsonBaseFile.cs" />
     <Compile Include="BaseClasses\HEJsonFileCollection.cs" />
     <Compile Include="DocumentWorkspace\HEJsonGameFile.cs" />
     <Compile Include="Blueprints\HEBlueprintTreeNode.cs" />
@@ -242,7 +242,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UseGlobalSettings="False" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_StartDate="2000/1/1" BuildVersion_UpdateFileVersion="True" />
+      <UserProperties BuildVersion_UpdateFileVersion="True" BuildVersion_StartDate="2000/1/1" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UseGlobalSettings="False" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UseUniversalClock="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
