Blueprint and StructureDefinitions objects and serialisation / deserialisation re-work partially complete.

--- a/HELLION.DataStructures/HELLION.DataStructures.csproj
+++ b/HELLION.DataStructures/HELLION.DataStructures.csproj
@@ -77,7 +77,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseClasses\HEBaseJsonFile.cs" />
-    <Compile Include="Blueprints\HEBlueprint.cs" />
     <Compile Include="Blueprints\HEBlueprintCollectionTreeNode.cs" />
     <Compile Include="Blueprints\HEBlueprintDataViewTreeNode.cs" />
     <Compile Include="Blueprints\HEBlueprintDockingPortTreeNode.cs" />
@@ -86,6 +85,7 @@
     <Compile Include="Blueprints\HEBlueprintStructureDefinitions.cs" />
     <Compile Include="Blueprints\HEBlueprintStructureTreeNode.cs" />
     <Compile Include="Blueprints\HEBlueprintsViewTreeNode.cs" />
+    <Compile Include="Blueprints\HEStationBlueprint.cs" />
     <Compile Include="DocumentWorkspace\HEDocumentWorkspace.cs" />
     <Compile Include="DocumentWorkspace\HEGameData.cs" />
     <Compile Include="GlobalSuppressions.cs" />
