--- a/HELLION.DataStructures/HELLION.DataStructures.csproj
+++ b/HELLION.DataStructures/HELLION.DataStructures.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Blueprints\HEBlueprintStructureTreeNode.cs" />
     <Compile Include="Blueprints\HEBlueprintsViewTreeNode.cs" />
     <Compile Include="Blueprints\HEStationBlueprint.cs" />
+    <Compile Include="Blueprints\HEStationBlueprintFile.cs" />
     <Compile Include="DocumentWorkspace\HEDocumentWorkspace.cs" />
     <Compile Include="DocumentWorkspace\HEGameData.cs" />
     <Compile Include="GlobalSuppressions.cs" />
@@ -93,7 +94,6 @@
     <Compile Include="DocumentWorkspace\HESolarSystem.cs" />
     <Compile Include="Blueprints\HEBlueprintCollection.cs" />
     <Compile Include="Blueprints\HEBlueprintStructureDefinitionsFile.cs" />
-    <Compile Include="Blueprints\HEJsonBlueprintFile.cs" />
     <Compile Include="BaseClasses\HEJsonFileCollection.cs" />
     <Compile Include="DocumentWorkspace\HEJsonGameFile.cs" />
     <Compile Include="Blueprints\HEBlueprintTreeNode.cs" />
@@ -243,7 +243,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UseGlobalSettings="False" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_StartDate="2000/1/1" BuildVersion_UpdateFileVersion="True" />
+      <UserProperties BuildVersion_UpdateFileVersion="True" BuildVersion_StartDate="2000/1/1" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UseGlobalSettings="False" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UseUniversalClock="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
