--- a/HELLION.DataStructures/HELLION.DataStructures.csproj
+++ b/HELLION.DataStructures/HELLION.DataStructures.csproj
@@ -81,7 +81,7 @@
     <Compile Include="Blueprints\HEBlueprintDataViewTreeNode.cs" />
     <Compile Include="Blueprints\HEBlueprintDockingPortTreeNode.cs" />
     <Compile Include="Blueprints\HEBlueprintHierarchyViewTreeNode.cs" />
-    <Compile Include="Blueprints\HEBlueprints.cs" />
+    <Compile Include="Blueprints\HEBlueprintsHandler.cs" />
     <Compile Include="Blueprints\HEBlueprintStructureDefinitions.cs" />
     <Compile Include="Blueprints\HEBlueprintStructureTreeNode.cs" />
     <Compile Include="Blueprints\HEBlueprintsViewTreeNode.cs" />
@@ -244,7 +244,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UseGlobalSettings="False" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_StartDate="2000/1/1" BuildVersion_UpdateFileVersion="True" />
+      <UserProperties BuildVersion_UpdateFileVersion="True" BuildVersion_StartDate="2000/1/1" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UseGlobalSettings="False" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UseUniversalClock="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
