--- a/HELLION.DataStructures/HELLION.DataStructures.csproj
+++ b/HELLION.DataStructures/HELLION.DataStructures.csproj
@@ -76,7 +76,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseClasses\HEBaseJsonFile.cs" />
+    <Compile Include="BaseClasses\HEJsonFile.cs" />
+    <Compile Include="BaseClasses\HEUIJsonFile.cs" />
     <Compile Include="Blueprints\HEBlueprintCollectionTreeNode.cs" />
     <Compile Include="Blueprints\HEBlueprintDataViewTreeNode.cs" />
     <Compile Include="Blueprints\HEBlueprintDockingPortTreeNode.cs" />
@@ -110,6 +111,7 @@
     <Compile Include="Utilities\HEUpdateChecker.cs" />
     <Compile Include="Utilities\HEUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\SteamIntegration.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="JsonSnippets\" />
