--- a/HELLION.StationBlueprintEditor/HELLION.StationBlueprintEditor.csproj
+++ b/HELLION.StationBlueprintEditor/HELLION.StationBlueprintEditor.csproj
@@ -72,14 +72,8 @@
     <Compile Include="BlueprintEditorForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="BlueprintEditorForm.Designer.cs">
+    <Compile Include="BlueprintEditorForm.designer.cs">
       <DependentUpon>BlueprintEditorForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StationBlueprintEditorProgram.cs" />
