--- a/HELLION.StationBlueprintEditor/HELLION.StationBlueprintEditor.csproj
+++ b/HELLION.StationBlueprintEditor/HELLION.StationBlueprintEditor.csproj
@@ -69,17 +69,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BlueprintEditorForm.cs">
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StationBlueprintEditorForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="BlueprintEditorForm.designer.cs">
-      <DependentUpon>BlueprintEditorForm.cs</DependentUpon>
+    <Compile Include="StationBlueprintEditorForm.designer.cs">
+      <DependentUpon>StationBlueprintEditorForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StationBlueprintEditorProgram.cs" />
-    <EmbeddedResource Include="BlueprintEditorForm.resx">
-      <DependentUpon>BlueprintEditorForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -89,6 +86,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="StationBlueprintEditorForm.resx">
+      <DependentUpon>StationBlueprintEditorForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
