Class (with file renames) to remove the HE prefix from almost all classes. DOES NOT BUILD (due to External Blueprint Editor implementation being incomplete)

--- a/HELLION.StationBlueprintEditor/HELLION.StationBlueprintEditor.csproj
+++ b/HELLION.StationBlueprintEditor/HELLION.StationBlueprintEditor.csproj
@@ -108,5 +108,8 @@
       <Name>HELLION.DataStructures</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="HELLION.StationBlueprintEditor.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
