--- a/HELLION.DataStructures/HELLION.DataStructures.csproj
+++ b/HELLION.DataStructures/HELLION.DataStructures.csproj
@@ -83,47 +83,49 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseClasses\HEJsonFile.cs" />
-    <Compile Include="BaseClasses\HEUIJsonFile.cs" />
-    <Compile Include="Blueprints\HEBlueprintCollectionTreeNode.cs" />
-    <Compile Include="Blueprints\HEBlueprintDataViewTreeNode.cs" />
+    <Compile Include="BaseClasses\Json_File.cs" />
+    <Compile Include="BaseClasses\Json_FileCollection.cs" />
+    <Compile Include="BaseClasses\Json_File_UI.cs" />
+    <Compile Include="BaseClasses\OrbitalData.cs" />
+    <Compile Include="Blueprints\BlueprintDataView_TreeNode.cs" />
+    <Compile Include="Blueprints\BlueprintsHandler.cs" />
+    <Compile Include="Blueprints\BlueprintsHandler_UI.cs" />
+    <Compile Include="Blueprints\BlueprintStructure_TreeNode.cs" />
+    <Compile Include="Blueprints\Blueprint_FileCollection.cs" />
+    <Compile Include="Blueprints\Blueprint_FileCollection_TreeNode.cs" />
     <Compile Include="Blueprints\HEBlueprintDockingPortTreeNode.cs" />
     <Compile Include="Blueprints\HEBlueprintHierarchyViewTreeNode.cs" />
-    <Compile Include="Blueprints\HEBlueprintsHandler.cs" />
-    <Compile Include="Blueprints\HEBlueprintStructureDefinitions.cs" />
-    <Compile Include="Blueprints\HEBlueprintStructureTreeNode.cs" />
     <Compile Include="Blueprints\HEBlueprintsViewTreeNode.cs" />
-    <Compile Include="Blueprints\HEStationBlueprint.cs" />
-    <Compile Include="Blueprints\HEStationBlueprintFile.cs" />
+    <Compile Include="Blueprints\OLD_BlueprintStructureDefinitions.cs" />
     <Compile Include="Blueprints\StaticDataHelper.cs" />
-    <Compile Include="DocumentWorkspace\HEDocumentWorkspace.cs" />
-    <Compile Include="DocumentWorkspace\HEGameData.cs" />
+    <Compile Include="Blueprints\StationBlueprint.cs" />
+    <Compile Include="Blueprints\StationBlueprint_File.cs" />
+    <Compile Include="Blueprints\StructureDefinitions_File.cs" />
+    <Compile Include="DocumentWorkspace\DocumentWorkspace.cs" />
+    <Compile Include="DocumentWorkspace\GameData.cs" />
+    <Compile Include="DocumentWorkspace\GameSave_Json_File.cs" />
+    <Compile Include="DocumentWorkspace\GuidManager.cs" />
+    <Compile Include="DocumentWorkspace\Json_TreeNode.cs" />
+    <Compile Include="DocumentWorkspace\SolarSystem.cs" />
+    <Compile Include="DocumentWorkspace\SolarSystem_TreeNode.cs" />
+    <Compile Include="DocumentWorkspace\SolarSystem_TreeNode_Sorter.cs" />
     <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="SearchHandler\HESearchHandler.cs" />
-    <Compile Include="DocumentWorkspace\HESolarSystem.cs" />
-    <Compile Include="Blueprints\HEBlueprintCollection.cs" />
-    <Compile Include="Blueprints\HEBlueprintStructureDefinitionsFile.cs" />
-    <Compile Include="BaseClasses\HEJsonFileCollection.cs" />
-    <Compile Include="DocumentWorkspace\HEJsonGameFile.cs" />
     <Compile Include="Blueprints\HEBlueprintTreeNode.cs" />
-    <Compile Include="DocumentWorkspace\HEGameDataTreeNode.cs" />
-    <Compile Include="BaseClasses\HEOrbitalData.cs" />
-    <Compile Include="SearchHandler\HESearchHandlerTreeNode.cs" />
-    <Compile Include="DocumentWorkspace\HESolarSystemTreeNode.cs" />
-    <Compile Include="DocumentWorkspace\HETNSorterSemiMajorAxis.cs" />
     <Compile Include="BaseClasses\HETreeNode.cs" />
     <Compile Include="BaseClasses\HETreeNodeType.cs" />
-    <Compile Include="DocumentWorkspace\HEGuidManager.cs" />
-    <Compile Include="Utilities\HEImageList.cs" />
-    <Compile Include="Utilities\HEUpdateChecker.cs" />
-    <Compile Include="Utilities\HEUtilities.cs" />
+    <Compile Include="SearchHandler\SearchHandler.cs" />
+    <Compile Include="SearchHandler\SearchHandler_TreeNode.cs" />
+    <Compile Include="Utilities\EmbeddedImages_ImageList.cs" />
+    <Compile Include="Utilities\EnumExtensions.cs" />
+    <Compile Include="Utilities\General.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\LogFileHandler.cs" />
+    <Compile Include="Utilities\Reflection.cs" />
     <Compile Include="Utilities\SteamIntegration.cs" />
+    <Compile Include="Utilities\StringExtensions.cs" />
+    <Compile Include="Utilities\UpdateChecker.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="JsonSnippets\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="_EmbeddedImages\Structures180x\STRUCT_AM.png" />
     <EmbeddedResource Include="_EmbeddedImages\Structures180x\STRUCT_ARG.png" />
@@ -251,10 +253,15 @@
     <EmbeddedResource Include="_EmbeddedImages\Icons16x\Toolbox_16x.png" />
     <EmbeddedResource Include="_EmbeddedImages\Icons16x\TreeView_16x.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="JsonSnippets\MatchToGUID.json" />
+    <None Include="JsonSnippets\PathSearchExamples.json" />
+    <None Include="JsonSnippets\PlayerPosition-ARG-Bridge.json" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UpdateFileVersion="True" BuildVersion_StartDate="2000/1/1" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_UseGlobalSettings="False" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UseUniversalClock="True" />
+      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.None.Increment" BuildVersion_UseGlobalSettings="False" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_StartDate="2000/1/1" BuildVersion_UpdateFileVersion="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
